# author-background

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/build_tweet/: build_tweet.rs  format_tweet.rs  mod.rs
src/build_tweet_data/: mod.rs  tweet_data_builder.rs
src/data/: messages.json  relevant_authors.json  twitter_url_queries.json
src/extract_info_from_tweet/: extract_tweet_data.rs  mod.rs  tweet_url_data_builder.rs
src/parse_html/: mod.rs
src/prepare_tweet_data/: get_author_bbc.rs  get_author_queries.rs  get_authors.rs  get_domain.rs  get_message.rs  get_organisation.rs  mod.rs
src/twitter_query_builder/: mod.rs
src/utils/: domain_selector.rs  mod.rs  read_from_data_dir.rs  requests.rs
src/utils/shared/: domain_handler.rs  mod.rs
