[package]
name = "author-background"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
scraper = "0.19.0"
url = "2.5.0"
thiserror = "1.0.57"
lazy_static = "1.4.0"
serde = {version="1.0.197" , features = ["derive"]}
serde_json = "1.0.114"
percent-encoding = "2.3.1"
